--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     },
     "dependencies": {
         "@react-native-community/masked-view": "^0.1.11",
+        "@react-native-community/voice": "^1.1.9",
         "@react-navigation/drawer": "^6.4.1",
         "@react-navigation/native": "^6.0.10",
+        "@react-navigation/native-stack": "^6.7.0",
         "@react-navigation/stack": "^6.2.1",
         "@types/styled-components-react-native": "^5.1.3",
         "eslint-config-airbnb-typescript": "^17.0.0",
@@ -27,7 +29,9 @@
         "react-native-gesture-handler": "^2.4.2",
         "react-native-reanimated": "^3.0.0-rc.0",
         "react-native-safe-area-context": "^4.2.5",
-        "react-native-screens": "^3.13.1"
+        "react-native-screens": "^3.13.1",
+        "react-native-vector-icons": "^9.2.0",
+        "styled-components": "^5.1.25"
     },
     "devDependencies": {
         "@babel/core": "^7.12.9",
@@ -35,7 +39,9 @@
         "@react-native-community/eslint-config": "^2.0.0",
         "@types/jest": "^26.0.23",
         "@types/react-native": "^0.67.3",
+        "@types/react-native-vector-icons": "^6.4.11",
         "@types/react-test-renderer": "^17.0.1",
+        "@types/styled-components": "^5.1.25",
         "@typescript-eslint/eslint-plugin": "^5.27.0",
         "@typescript-eslint/parser": "^5.17.0",
         "babel-jest": "^26.6.3",
