--- a/ios/Podfile
+++ b/ios/Podfile
@@ -23,6 +23,8 @@ target 'Evolex' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'react-native-safe-area-context', :path => '../node_modules/react-native-safe-area-context'
+
   target 'EvolexTests' do
     inherit! :complete
     # Pods for testing
