--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
         "prettier": "^2.6.2",
         "react": "17.0.2",
         "react-native": "0.68.2",
+        "react-native-elements": "^3.4.2",
         "react-native-gesture-handler": "^2.4.2",
         "react-native-reanimated": "^3.0.0-rc.0",
-        "react-native-safe-area-context": "^4.2.5",
+        "react-native-safe-area-context": "^4.3.3",
         "react-native-screens": "^3.13.1",
         "react-native-vector-icons": "^9.2.0",
         "styled-components": "^5.1.25"
